---------------------------------------------------------------------------------------------------
Version: 0.00.2
Date: 2020.06.XX
  Changes:
    - Renamed from "Core Library" to "Function Library"
---------------------------------------------------------------------------------------------------
Version: 0.00.1
Date: 2020.06.06
  Features:
    - Initial Beta Release